src/test/resources/etapa4/failing/wrongParamType.ru
/? el tipo del parametro no es el esperado al llamar a un método

struct A{
}
impl A{
    .(){}
    fn metodo1 (Str f) -> void {

    }

    fn m2 () -> void {
        Int f;
        (metodo1(f));
    }
}


start {}